[package]
authors = ["Elliott Linder <elliott@linder.bz>"]
name = "muonline-gs"
version = "0.1.0"

[dependencies]
futures-await = { git = "https://github.com/PaulGrandperrin/futures-await" }
jsonrpc-core = "8.0"
jsonrpc-http-server = "8.0"
jsonrpc-macros = "8.0"
matches = "0.1.6"
serde = "1.0"
serde_derive = "1.0"
structopt = "0.2"
tap = "0.2"
tokio = "0.1"

[dependencies.log]
features = ["std"]
version = "0.4"

[dependencies.muonline-db]
path = "../muonline-db"

[dependencies.muonline-packet]
path = "../muonline-packet"

[dependencies.muonline-packet_codec]
path = "../muonline-packet_codec"

[dependencies.muonline-protocol]
path = "../muonline-protocol"
