[package]
authors = ["Elliott Linder <elliott@linder.bz>"]
name = "muonline-js"
version = "0.1.0"

[[bin]]
doc = false
name = "mujs"
path = "src/bin/main.rs"

[dependencies]
closet = "0.2.2"
cursive = "0.8"
futures = "0.1"
jsonrpc-client-core = "0.3"
jsonrpc-client-http = "0.3"
jsonrpc-core = "8.0"
jsonrpc-http-server = "8.0"
jsonrpc-macros = "8.0"
serde = "1.0"
serde_derive = "1.0"
structopt = "0.2"
tap = "0.2"
tokio = "0.1"

[dependencies.log]
features = ["std"]
version = "0.4"

[dependencies.muonline-packet]
path = "../muonline-packet"

[dependencies.muonline-packet_codec]
path = "../muonline-packet_codec"

[dependencies.muonline-protocol]
path = "../muonline-protocol"
