[package]
authors = ["Elliott Linder <elliott.darfink@gmail.com>"]
name = "muonline-protocol"
version = "0.1.0"

[dependencies]
bitfield = "0.12"
enum-primitive-derive = "0.1"
num-traits = "0.2"
serde = "1.0"
serde_derive = "1.0"
typenum = "1.10"

[dependencies.muonline-packet]
features = ["serialize"]
path = "../muonline-packet"

[dependencies.muonline-packet_derive]
path = "../muonline-packet_derive"

[dependencies.muonline-packet_serialize]
path = "../muonline-packet_serialize"

[dependencies.muonline-sdk]
path = "../muonline-sdk"