[package]
name = "muonline-sdk"
version = "0.1.0"
authors = ["Elliott Linder <elliott.darfink@gmail.com>"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
bitflags = "1.0"
num-traits = "0.2"
enum-primitive-derive = "0.1"

[dependencies.muonline-packet_serialize]
path = "../muonline-packet_serialize"