[package]
name = "murust-data-model"
version = "0.1.0"
authors = ["Elliott Linder <elliott@linder.bz>"]

[dependencies]
bitflags = "1.0"
enum-primitive-derive = "0.1"
muonline-packet_serialize = { git = "https://github.com/darfink/muonline-packet" }
num-traits = "0.2"
serde = "1.0"
serde_derive = "1.0"
uuid = { version = "0.6", features = ["v4"] }