[package]
authors = ["Elliott Linder <elliott@linder.bz>"]
name = "murust-game-server"
version = "0.1.0"

[dependencies]
futures-await = { git = "https://github.com/darfink/futures-await" }
jsonrpc-core = "8.0"
jsonrpc-http-server = "8.0"
jsonrpc-macros = "8.0"
muonline-packet = { git = "https://github.com/darfink/muonline-packet" }
muonline-packet_codec = { git = "https://github.com/darfink/muonline-packet" }
murust-data-model = { path = "../murust-data-model" }
murust-protocol = { path = "../murust-protocol" }
murust-service = { path = "../murust-service" }
serde = "1.0"
serde_derive = "1.0"
structopt = "0.2"
tap = "0.2"
tokio = "0.1"
tokio-core = "0.1"

[dependencies.log]
features = ["std"]
version = "0.4"