[package]
name = "murust-service"
version = "0.1.0"
authors = ["Elliott Linder <elliott@linder.bz>"]

[dependencies]
bcrypt = "0.2"
failure = "0.1"
murust-data-model = { path = "../murust-data-model" }
murust-repository = { path = "../murust-repository" }
num-traits = "0.2"
uuid = { version = "0.6", features = ["v4"] }

[dependencies.log]
features = ["std"]
version = "0.4"

[dev-dependencies]
tempdir = "0.3"
matches = "0.1"